# tsm_django-helmholtz-aai

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  setup.cfg  tox.ini
django_helmholtz_aai/: __init__.py  _version.py  admin.py  app_settings.py  apps.py  models.py  signals.py  urls.py  views.py
django_helmholtz_aai/management/commands/: remove_empty_vos.py
django_helmholtz_aai/migrations/: 0001_initial.py  0002_auto_20220214_1413.py
django_helmholtz_aai/templatetags/: helmholtz_aai.py
django_helmholtz_aai/tests/: test_authentification_view.py
docs/: api.rst  conf.py  contributing.rst  index.rst
testproject/: settings.py  urls.py
testproject/templates/: home.html
testproject/templates/registration/: logged_out.html  login.html
