[metadata]
name = django-helmholtz-aai
version = 0.1.0
description = A Django app to login via Helmholtz AAI
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://coastgit.hzg.de/HCDC/django/django-academic-community
author = Phiilpp S. Sommer, Housam Dibeh, Hatef Takyar
author_email = philipp.sommer@hereon.de, housam.dibeh@hereon.de, hatef.takyar@hereon.de
license = EUPL-1.2
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
python_requires = >=3.7
packages = find:
install_requires =
    requests
    Django>=3.1,<3.3
    django-select2
    djangorestframework
    django-phonenumber-field[phonenumberslite]
    django-bootstrap4
    django-reversion
    django-reversion-compare
    django-guardian
    django-simple-captcha
    django-colorfield
    django-extensions
    django-sass-processor
    django-private-storage
    django-filter
    Pillow>=3.0
    # django-cms plugins and packages
    django-cms>=3.8,<3.10
    html5lib>=1.0.1
    six
    pytz
    django-classy-tags>=2.0
    django-sekizai>=2.0
    django-mptt>0.9
    djangocms-admin-style>=2.0,<3.0
    django-treebeard>=4.0,<5.0
    djangocms-text-ckeditor>=4.0,<5.0
    djangocms-link>=3.0,<4.0
    djangocms-icon>=2.0,<3.0
    djangocms-style>=3.0,<4.0
    djangocms-googlemap>=2.0,<3.0
    djangocms-video>=3.0,<4.0
    djangocms-file>=3.0,<4.0
    djangocms-picture>=3.0,<4.0
    djangocms-bootstrap4>=2.0,<3.0


[options.package_data]
* =
    static/**
    templates/**
    py.typed


[options.packages.find]
exclude =
    clm_tools_test_site

[options.extras_require]
testsite =
    tox
    requests
    types-requests
    pytest
    pytest-cov
    pytest-lazy-fixture
    pytest-django
    isort==5.9.3
    black==21.9b0
    blackdoc==0.3.4
    flake8==3.9.2
    pre-commit
    mypy
    django-stubs


dev =
    %(testsite)s
    sphinx
    sphinxcontrib-django


[mypy]
ignore_missing_imports = True
plugins =
    mypy_django_plugin.main

[mypy.plugins.django-stubs]
django_settings_module = "testproject.settings"


[versioneer]
VCS = git
style = pep440
versionfile_source = django_helmholtz_aai/_version.py
versionfile_build = django_helmholtz_aai/_version.py
tag_prefix = v
parentdir_prefix = django-helmholtz-aai-

[flake8]
ignore =
    E203 # whitespace before ':' - doesn't work well with black
    E402 # module level import not at top of file
    E501 # line too long - let black worry about that
    W503 # line break before binary operator
